Correçoes e melhorias no arquivo de configuraçao do nginx.

--- a/docker/docker-compose/nginx/app.conf
+++ b/docker/docker-compose/nginx/app.conf
@@ -2,7 +2,7 @@ server {
     # Script criado por: Francisco - gomes.tisystem@gmail.com.
 
     # Set the port to listen on and the server name
-    server_name app_server;
+    server_name app;
 
     # Port http
     listen 80;
@@ -15,11 +15,6 @@ server {
 
     # Specify the default character set
     charset utf-8;
-
-    # Setup the default location configuration
-    location / {
-        try_files $uri $uri/ /index.php;
-    }
 
     # Specify the details of favicon.ico
     location = /favicon.ico { access_log off; log_not_found off; }
@@ -50,28 +45,22 @@ server {
         fastcgi_buffers 4 16k;
     }
 
+    # Setup the default location configuration
+    location ~ "^/(.+)$" {
+        try_files $uri $uri/ /index.php?path=$1; #--> GClinic
+        #try_files $uri $uri/ /index.php;
+        #try_files $uri $uri/ /index.php?$args;
+    }
+
     # Specify what happens what .ht files are requested
     location ~ /\.ht {
         deny all;
     }
 
-    #--> Start GClinic definition
-    location ~ "^/(.+)$" {
-        try_files $uri $uri/ /index.php?path=$1;
-    }
-
-    # Páginas de erros personalizadas
+    # Páginas de erro personalizadas
     error_page 404 /erros/notfound.html;
     error_page 400 /erros/badrequest.html;
     error_page 401 /erros/authreqd.html;
     error_page 403 /gclinic/public_html/forbidden.html;
     error_page 500 /erros/serverr.html;
-    # --> End GClinic definition.
-
-    # SAP configuração
-    #rewrite ^/.*$ /index.php last;
-
-    #location ~ "^/.*$" {
-    # break;
-    #} end SAP
 }
