--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -1,13 +1,11 @@
 # Criado por: Francisco - gomes.tisystem@gmail.com.
 APP_NAME=app_dev
-APP_DIRNAME=p_gclinic
+APP_DIRECTORY_PATH=../p_gclinic
 APP_ENV=dev
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost:80
-
 LOG_CHANNEL=stack
-
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3307:3306
