--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -7,7 +7,7 @@ APP_DEBUG=true
 APP_URL=http://localhost:80
 LOG_CHANNEL=stack
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=3307:3306
 DB_DATABASE=bd_dev
 DB_USERNAME=user_dev
