--- a/docker-compose/php/conf.d/xdebug.ini
+++ b/docker-compose/php/conf.d/xdebug.ini
@@ -4,7 +4,9 @@ zend_extension=xdebug.so
 xdebug.mode=develop,debug
 xdebug.start_with_request=yes
 #Replace host.docker.internal to your computers IP address if linux
-xdebug.client_host=172.17.0.1
-
+#xdebug.client_host=172.17.0.1
+#xdebug.client_port=9003
 xdebug.log=/tmp/xdebug.log
+
+
 
