--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -1,12 +1,15 @@
 # Criado por: Francisco - gomes.tisystem@gmail.com.
-APP_NAME=app_dev
-APP_DIRECTORY_PATH=../p_gclinic
-APP_ENV=dev
-APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost:80
-LOG_CHANNEL=stack
-DB_CONNECTION=mysql
+APP_SERVER_NAME=app_dev
+APP_DIRECTORY_PATH=../../p_gclinic
+#APP_ENV=dev
+#APP_KEY=
+APP_IDE=VSCODE
+#APP_DEBUG=true
+APP_CLIENT_IP=172.17.0.1
+APP_CLIENT_PORT=9003
+#APP_URL=http://localhost:80
+#LOG_CHANNEL=stack
+#DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3307:3306
 DB_DATABASE=bd_dev
