Correções no script, mudanças nas variaveis de ambiente.

--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -1,8 +1,10 @@
 # Criado por: Francisco - gomes.tisystem@gmail.com.
-APP_SERVER_NAME=app_dev
+APP_SERVER_NAME=app
 APP_DIRECTORY_PATH=../../p_gclinic
 #APP_ENV=dev
 #APP_KEY=
+PHP_IMG_VERSION=7.4-fpm
+PHP_VERSION=7.4
 APP_IDE=VSCODE
 #APP_DEBUG=true
 APP_CLIENT_IP=172.17.0.1
