--- a/docker-compose/nginx/app.conf
+++ b/docker-compose/nginx/app.conf
@@ -2,7 +2,7 @@ server {
     # Script criado por: Francisco - gomes.tisystem@gmail.com.
 
     # Set the port to listen on and the server name
-    server_name app;
+    server_name lp;
 
     # Port http
     listen 80;
@@ -34,7 +34,7 @@ server {
     location ~ \.php$ {
         try_files $uri = 404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass app:9000;
+        fastcgi_pass lp:9000;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
