--- a/docker-compose/php/conf.d/xdebug.ini
+++ b/docker-compose/php/conf.d/xdebug.ini
@@ -6,6 +6,8 @@ xdebug.start_with_request=yes
 #Replace host.docker.internal to your computers IP address if linux
 #xdebug.client_host=172.17.0.1
 #xdebug.client_port=9003
+xdebug.start_upon_error=yes
+xdebug.log_level=7
 xdebug.log=/tmp/xdebug.log
 
 
