Inserido o conf do nginx para o Laravel.

--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -1,6 +1,7 @@
 # Criado por: Francisco - gomes.tisystem@gmail.com.
 APP_SERVER_NAME=app
-APP_DIRECTORY_PATH=../../p_gclinic
+#APP_DIRECTORY_PATH=../../p_gclinic
+APP_DIRECTORY_PATH=../../project_euax
 #APP_ENV=dev
 #APP_KEY=
 PHP_IMG_VERSION=7.4-fpm
