--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -1,7 +1,7 @@
 # Criado por: Francisco - gomes.tisystem@gmail.com.
 APP_SERVER_NAME=app
-#APP_DIRECTORY_PATH=../../p_gclinic
-APP_DIRECTORY_PATH=../../project_euax
+APP_DIRECTORY_PATH=../../projects
+#APP_DIRECTORY_PATH=../../projectmanager
 #APP_ENV=dev
 #APP_KEY=
 PHP_IMG_VERSION=7.4-fpm
