--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -1,6 +1,6 @@
 # Criado por: Francisco - gomes.tisystem@gmail.com.
 APP_SERVER_NAME=app
-APP_DIRECTORY_PATH=../../projects
+APP_DIRECTORY_PATH=../../mvc
 #APP_DIRECTORY_PATH=../../projectmanager
 #APP_ENV=dev
 #APP_KEY=
