--- a/docker-compose/nginx/app.conf
+++ b/docker-compose/nginx/app.conf
@@ -1,66 +1,52 @@
 server {
-    # Script criado por: Francisco - gomes.tisystem@gmail.com.
 
-    # Set the port to listen on and the server name
+	 # Set the port to listen on and the server name
     server_name lp;
 
-    # Port http
     listen 80;
+    index index.php index.html;
+    root /var/www/public;
 
-    # Set the document root of the project
-    root /var/www;
+    # serve static files directly
+	location ~* \.(jpg|jpeg|gif|css|png|js|ico|html)$ {
+		access_log off;
+		expires max;
+		log_not_found off;
+	}
 
-    # Set the directory index files
-    index index.php;
+	# remove barras finais (evita problemas de conteúdo duplicado de SEO) 
+	if (!-d $request_filename)
+	{
+		rewrite ^/(.+)/$ /$1 permanent;
+	}
 
-    # Specify the default character set
-    charset utf-8;
+	# aplicar NÃO www
+	if ($host ~* ^www\.(.*))
+	{
+		set $host_without_www $1;
+		rewrite ^/(.*)$ $scheme://$host_without_www/$1 permanent;
+	}
 
-    # Specify the details of favicon.ico
-    location = /favicon.ico { access_log off; log_not_found off; }
+	# a menos que a solicitação seja para um arquivo válido (imagem, js, css, etc.), envie para bootstrap
+	#if (!-e $request_filename)
+	#{
+	#	rewrite ^/(.*)$ /index.php?/$1 last;
+	#	break;
+	#}
 
-    # Specify the details of robots.txt
-    location = /robots.txt  { access_log off; log_not_found off; }
+	location / {
+		try_files $uri $uri/ /index.php?$query_string;
+	}
 
-    # Specify the logging configuration
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
-
-    sendfile off;
-
-    client_max_body_size 100m;
-
-    # Specify what happens when PHP files are requested
-    location ~ \.php$ {
-        try_files $uri = 404;
+	location ~* \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass lp:9000;
         fastcgi_index index.php;
-        include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
-        fastcgi_param APPLICATION_ENV development;
-        fastcgi_intercept_errors On;
-        fastcgi_buffer_size 16k;
-        fastcgi_buffers 4 16k;
+        include fastcgi_params;
     }
 
-    # Setup the default location configuration
-    location ~ "^/(.+)$" {
-        try_files $uri $uri/ /index.php?path=$1; #--> GClinic
-        #try_files $uri $uri/ /index.php;
-        #try_files $uri $uri/ /index.php?$args;
-    }
-
-    # Specify what happens what .ht files are requested
     location ~ /\.ht {
-        deny all;
-    }
-
-    # Páginas de erro personalizadas
-    error_page 404 /erros/notfound.html;
-    error_page 400 /erros/badrequest.html;
-    error_page 401 /erros/authreqd.html;
-    error_page 403 /gclinic/public_html/forbidden.html;
-    error_page 500 /erros/serverr.html;
+		deny all;
+	}
 }
