--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -1,14 +1,13 @@
 # Criado por: Francisco - gomes.tisystem@gmail.com.
-APP_SERVER_NAME=app
+APP_SERVER_NAME=webapp
 APP_DIRECTORY_PATH=../../mvc
 #APP_DIRECTORY_PATH=../../projectmanager
 #APP_ENV=dev
 #APP_KEY=
-PHP_IMG_VERSION=7.4-fpm
-PHP_VERSION=7.4
+PHP_IMG_VERSION=php:7.4-fpm
 APP_IDE=VSCODE
 #APP_DEBUG=true
-APP_CLIENT_IP=172.17.0.1
+APP_CLIENT_IP=localhost
 APP_CLIENT_PORT=9003
 #APP_URL=http://localhost:80
 #LOG_CHANNEL=stack
