--- a/docker-compose/nginx/app.conf
+++ b/docker-compose/nginx/app.conf
@@ -1,7 +1,6 @@
 server {
-
-	 # Set the port to listen on and the server name
-    server_name lp;
+	# Set the port to listen on and the server name
+    server_name webapp;
 
     listen 80;
     index index.php index.html;
@@ -40,7 +39,7 @@ server {
 
 	location ~* \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass lp:9000;
+        fastcgi_pass webapp:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
