--- a/docker-compose/php/conf.d/xdebug.ini
+++ b/docker-compose/php/conf.d/xdebug.ini
@@ -10,5 +10,7 @@ xdebug.start_upon_error=yes
 xdebug.log_level=7
 xdebug.log=/tmp/xdebug.log
 
-
-
+#xdebug.client_host = localhost
+#xdebug.client_port = 9003
+xdebug.discover_client_host = false
+xdebug.idekey = VSCODE
