--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -1,7 +1,7 @@
 # Criado por: Francisco - gomes.tisystem@gmail.com.
 APP_SERVER_NAME=webapp
-APP_DIRECTORY_PATH=../../mvc
-#APP_DIRECTORY_PATH=../../projectmanager
+APP_DIRECTORY_PATH=../mvc
+#APP_DIRECTORY_PATH=../projectmanager
 #APP_ENV=dev
 #APP_KEY=
 PHP_IMG_VERSION=php:7.4-fpm
