Otimizações no script.

--- a/docker-compose/Dockerfile
+++ b/docker-compose/Dockerfile
@@ -53,7 +53,7 @@ RUN docker-php-ext-configure ldap --with-libdir=lib/x86_64-linux-gnu \
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
 # Criar usuário do sistema para executar comandos do Composer e Artisan
-#RUN useradd -G www-data,root -u $uid -d /home/$user $user
+RUN useradd -G www-data,root -u $uid -d /home/$user $user
 RUN mkdir -p /home/$user/.composer && chown -R $user:$user /home/$user
 
 # Defini diretório de trabalho
