Update .env, Dockerfile, and docker-compose.yml

--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -5,6 +5,7 @@ APP_DIRECTORY_PATH=../mvc
 #APP_ENV=dev
 #APP_KEY=
 PHP_IMG_VERSION=php:7.4-fpm
+XDEBUG_VERSION="3.0.2"
 APP_IDE=VSCODE
 #APP_DEBUG=true
 APP_CLIENT_IP=localhost
