--- a/docker-compose/Dockerfile
+++ b/docker-compose/Dockerfile
@@ -1,62 +1,49 @@
-# Criado por: Francisco - gomes.tisystem@gmail.com.
+# Criado por: Francisco Aparecido - [gomes.tisystem@gmail.com]
 
-# Argumento definido em docker-compose.yml
-ARG PHP_IMG_VERSION
-
-# Set master image
-FROM ${PHP_IMG_VERSION}
-
-# Argumentos definidos em docker-compose.yml
+# Argumentos de compilação
 ARG user
 ARG uid
+ARG PHP_IMG_VERSION
+ARG XDEBUG_VERSION
+ARG DEFAULT_XDEBUG_VERSION="3.0.2"
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
-    git \
-    curl \
-    apt-utils \
+
+# Usando uma imagem base leve do PHP
+FROM ${PHP_IMG_VERSION}
+
+# Instalando dependências e limpando o cache
+RUN apt-get update && \
+    apt-get install -y \
+    git curl apt-utils \
     libpng-dev \
     libonig-dev \
     libxml2-dev \
     zip libzip-dev \
-    unzip \
-    libldap2-dev \
-    libxml2-dev \
-    libmagickwand-dev --no-install-recommends \
-    && pecl install imagick \
-    xdebug
+    unzip libldap2-dev \
+    libmagickwand-dev --no-install-recommends && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
-# Clear cache
-RUN apt-get clean && rm -rf /var/lib/apt/lists/*
+# Configurando extensões do PHP
+RUN docker-php-ext-configure ldap --with-libdir=lib/x86_64-linux-gnu && \
+    docker-php-ext-configure zip && \
+    docker-php-ext-install zip gd dom \
+    opcache pdo ldap pdo_mysql mysqli mbstring \
+    exif pcntl soap bcmath json && \
+    pecl install xdebug-3.0.2 && \
+    docker-php-ext-enable pdo_mysql xdebug
 
-# Install PHP extensions, configure and enable
-RUN docker-php-ext-configure ldap --with-libdir=lib/x86_64-linux-gnu \ 
-&& docker-php-ext-configure zip \
-&& docker-php-ext-install zip gd dom opcache pdo ldap pdo_mysql mysqli mbstring exif pcntl soap bcmath json \
-&& docker-php-ext-enable pdo_mysql imagick xdebug
-
-#-----------------
-# Add UID '1000' to www-data
-#RUN usermod -u 1000 www-data
-
-#Copy existing application directory permissions
-#COPY --chown=www-data:www-data . /var/www
-
-# Change current user to www
-#USER www-data
-
-# Obtém o composer mais recente
-#COPY --from=composer:latest /usr/bin/composer /usr/local/bin/composer
-#----------------------------------
-
-# Install Composer
+# Instalando Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
-# Criar usuário do sistema para executar comandos do Composer e Artisan
-RUN useradd -G www-data,root -u $uid -d /home/$user $user
-RUN mkdir -p /home/$user/.composer && chown -R $user:$user /home/$user
+# Criando o usuário do sistema
+RUN useradd -G www-data,root -u $UID -d /home/$USER $USER && \
+    mkdir -p /home/$USER/.composer && \
+    chown -R $USER:$USER /home/$USER
 
-# Defini diretório de trabalho
+# Definindo o diretório de trabalho
 WORKDIR /var/www
 
-USER $user
+# Trocando para o usuário especificado em ARG
+USER $USER
+
