--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -5,13 +5,18 @@ services:
   webapp:
     # Servidor de Aplicação (PHP)
     build:
+      context: ./
+      dockerfile: Dockerfile
       args:
         user: $USER
         uid: 1000
+        APP_SERVER_NAME: ${APP_SERVER_NAME}
+        APP_DIRECTORY_PATH: ${APP_DIRECTORY_PATH}
         PHP_IMG_VERSION: ${PHP_IMG_VERSION}
-      context: ./
-      dockerfile: Dockerfile
-    image: php
+        APP_IDE: ${APP_IDE}
+        APP_CLIENT_IP: ${APP_CLIENT_IP}
+        APP_CLIENT_PORT: ${APP_CLIENT_PORT}
+    #image: ${PHP_IMG_VERSION}
     container_name: webapp
     restart: unless-stopped
     tty: true
@@ -54,7 +59,7 @@ services:
     networks:
       app-network:
         aliases:
-          - mysql_host #Qualquer contêiner conectado à rede de teste pode acessar isso simplesmente usando "mysql_host" como hostname
+          - mysql_host # Qualquer contêiner conectado à rede de teste pode acessar isso simplesmente usando "mysql_host" como hostname
 
   # Definições do Servidor Web (SW)
   nginx:
@@ -80,4 +85,4 @@ networks:
     name: app-network
     driver: bridge
 
-#Corrigi problema de bridge -> docker system prune -a --volumes && docker network prune
+# Corrigi problema de bridge -> docker system prune -a --volumes && docker network prune
