Update .env, Dockerfile, and docker-compose.yml

--- a/docker-compose/Dockerfile
+++ b/docker-compose/Dockerfile
@@ -1,15 +1,14 @@
-# Criado por: Francisco Aparecido - [gomes.tisystem@gmail.com]
+# Criado por: Francisco Aparecido - [gomes.tisystem@gmail.com].
 
-# Argumentos de compilação
-ARG user
-ARG uid
 ARG PHP_IMG_VERSION
-ARG XDEBUG_VERSION
-ARG DEFAULT_XDEBUG_VERSION="3.0.2"
-
 
 # Usando uma imagem base leve do PHP
 FROM ${PHP_IMG_VERSION}
+
+# Argumentos definidos em docker-compose.yml
+ARG user
+ARG uid
+ARG XDEBUG_VERSION
 
 # Instalando dependências e limpando o cache
 RUN apt-get update && \
@@ -30,20 +29,19 @@ RUN docker-php-ext-configure ldap --with-libdir=lib/x86_64-linux-gnu && \
     docker-php-ext-install zip gd dom \
     opcache pdo ldap pdo_mysql mysqli mbstring \
     exif pcntl soap bcmath json && \
-    pecl install xdebug-3.0.2 && \
+    pecl install xdebug-${XDEBUG_VERSION} && \
     docker-php-ext-enable pdo_mysql xdebug
 
 # Instalando Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
-# Criando o usuário do sistema
-RUN useradd -G www-data,root -u $UID -d /home/$USER $USER && \
-    mkdir -p /home/$USER/.composer && \
-    chown -R $USER:$USER /home/$USER
+# Criar usuário do sistema para executar comandos do Composer e Artisan
+RUN useradd -G www-data,root -u $uid -d /home/$user $user && \
+    mkdir -p /home/$user/.composer && \
+    chown -R $user:$user /home/$user
 
 # Definindo o diretório de trabalho
 WORKDIR /var/www
 
 # Trocando para o usuário especificado em ARG
-USER $USER
-
+USER $user
