--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -1,7 +1,7 @@
 # Criado por: Francisco - gomes.tisystem@gmail.com
 version: "3.5"
 
- # Definições do Servidor de Aplicação (SApp)
+ # Definições do Servidor de Aplicação (SAw)
 services:
   webapp:
     build:
@@ -12,7 +12,7 @@ services:
         uid: 1000
         PHP_IMG_VERSION: ${PHP_IMG_VERSION}
         XDEBUG_VERSION: ${XDEBUG_VERSION}
-    #image: ${PHP_IMG_VERSION}
+    image: php:7.4
     container_name: webapp
     restart: unless-stopped
     tty: true
