--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.5"
 
  # Definições do Servidor de Aplicação (SAw)
 services:
-  webapp:
+  php-server:
     build:
       context: ./
       dockerfile: Dockerfile
@@ -13,7 +13,7 @@ services:
         PHP_IMG_VERSION: ${PHP_IMG_VERSION}
         XDEBUG_VERSION: ${XDEBUG_VERSION}
     image: php:7.4
-    container_name: webapp
+    container_name: php-server
     restart: unless-stopped
     tty: true
     environment:
@@ -29,9 +29,9 @@ services:
       - app-network
 
   # Definições do Servidor de Banco de Dados (SBD)
-  mysql:
+  mysql-server:
     image: mysql:8.0
-    container_name: mysql
+    container_name: mysql-server
     command: --default-authentication-plugin=mysql_native_password --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     restart: unless-stopped
     environment:
@@ -55,9 +55,9 @@ services:
           - mysql_docker # Qualquer contêiner conectado à rede de teste pode acessar isso simplesmente usando "mysql_docker" como hostname
 
   # Definições do Servidor Web (SW)
-  nginx:
+  nginx-server:
     image: nginx:alpine
-    container_name: nginx
+    container_name: nginx-server
     restart: unless-stopped
     tty: true
     ports:
