Melhorias e correções no script docker.

--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -1,17 +1,21 @@
 # Criado por: Francisco - gomes.tisystem@gmail.com.
-
 APP_SERVER_NAME=webapp
-APP_DIRECTORY_PATH=../mvc
+
+# Variáveis de diretório de aplicação para cada usuário
+DIRECTORY_PATH_APP1=/home/admin1/development/app
+DIRECTORY_PATH_APP2=/home/admin2/development/app
+DIRECTORY_PATH_APP3=/home/admin3/development/app
+
 PHP_IMG_VERSION=php:7.4-fpm
-XDEBUG_VERSION="3.0.2"
+XDEBUG_VERSION="3.1.6"
 APP_IDE=VSCODE
+
 APP_CLIENT_IP=localhost
 APP_CLIENT_PORT=9003
 
-
-#DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3307:3306
-DB_DATABASE=bd_dev
+DB_DATABASE=db_dev
 DB_USERNAME=user_dev
 DB_PASSWORD=pass_dev
+
