--- a/docker-compose/nginx/app.conf
+++ b/docker-compose/nginx/app.conf
@@ -1,51 +1,48 @@
 server {
-	# Set the port to listen on and the server name
+    # Set the port to listen on and the server name
     server_name webapp;
 
     listen 80;
     index index.php index.html;
-    root /var/www/public;
 
-    # serve static files directly
-	location ~* \.(jpg|jpeg|gif|css|png|js|ico|html)$ {
-		access_log off;
-		expires max;
-		log_not_found off;
-	}
+    # Definição padrão do root_path
+    set $root_path /var/www/app1/public;
 
-	# remove barras finais (evita problemas de conteúdo duplicado de SEO) 
-	if (!-d $request_filename)
-	{
-		rewrite ^/(.+)/$ /$1 permanent;
-	}
+    # Define os diretórios raiz com base na URL da aplicação
+    if ($request_uri ~* /app1) {
+        set $root_path /var/www/app1/public;
+    }
+    if ($request_uri ~* /app2) {
+        set $root_path /var/www/app2/public;
+    }
+    if ($request_uri ~* /app3) {
+        set $root_path /var/www/app3/public;
+    }
 
-	# aplicar NÃO www
-	if ($host ~* ^www\.(.*))
-	{
-		set $host_without_www $1;
-		rewrite ^/(.*)$ $scheme://$host_without_www/$1 permanent;
-	}
+    # Define o diretório raiz para arquivos estáticos
+    location ~* \.(jpg|jpeg|gif|css|png|js|ico|html)$ {
+        access_log off;
+        expires max;
+        log_not_found off;
+        root $root_path;  
+    }
 
-	# a menos que a solicitação seja para um arquivo válido (imagem, js, css, etc.), envie para bootstrap
-	#if (!-e $request_filename)
-	#{
-	#	rewrite ^/(.*)$ /index.php?/$1 last;
-	#	break;
-	#}
+    # Definindo os diretórios raiz dinamicamente com base na URL
+    location / {
+        root $root_path;
+        index index.php index.html; # Adicionando a diretiva index aqui
+        try_files $uri $uri/ /index.php?$query_string;
+    }
 
-	location / {
-		try_files $uri $uri/ /index.php?$query_string;
-	}
-
-	location ~* \.php$ {
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass webapp:9000;
-        fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    location ~ \.php$ {
+        root $root_path;  
         include fastcgi_params;
+        fastcgi_pass php-server:9000;
+        fastcgi_param SCRIPT_FILENAME $root_path$fastcgi_script_name;
     }
 
     location ~ /\.ht {
-		deny all;
-	}
+        deny all;
+    }
 }
+
