Update .env and Comandos.txt

--- a/docker/.env
+++ b/docker/.env
@@ -2,9 +2,9 @@
 APP_SERVER_NAME=webapp
 
 # Variáveis de diretório de aplicação para cada usuário
-DIRECTORY_PATH_APP1=/home/admin1/development/app
-DIRECTORY_PATH_APP2=/home/admin2/development/app
-DIRECTORY_PATH_APP3=/home/admin3/development/app
+DIRECTORY_PATH_APP1=/home/$USER/development/app1
+DIRECTORY_PATH_APP2=/home/$USER/development/app2
+DIRECTORY_PATH_APP3=/home/$USER/development/app3
 
 PHP_IMG_VERSION=php:7.4-fpm
 XDEBUG_VERSION="3.1.6"
